Main Page fixed and aligned.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,17 @@ background: url("../resources/images/loginPage.jpg");
   color:white;
 }
 
+.nav li span{
+  cursor: pointer;
+}
+
+.nav li span:hover{
+  background: rgba(255,255,255,0.4);
+  background-blend-mode: lighten;
+  border: none;
+  filter:blur(0.2px);
+}
+
 .divAlign{
   margin-top : 15rem;
 }
